--- a/.github/workflows/push_action.yml
+++ b/.github/workflows/push_action.yml
@@ -1,7 +1,7 @@
-name: first_action
+name: push_action
 on: [push]
 jobs:
-    train-model:
+    train-and-run-model:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
@@ -12,9 +12,9 @@ jobs:
         - name: Install dependencies
           run: python -m pip install -r requirements.txt
         - name: Train model
-          run: python src/models/train.py
+          run: python src/models/Ecoli_Trainieren.py
         - name: Predict model
-          run: python src/models/predict.py
+          run: python src/models/Ecoli_Bestimmen.py
         - name: Archive production artifacts
           uses: actions/upload-artifact@v2
           with:
